# Advent-of-Code

./: .gitignore  Cargo.toml  README.md  fetch_input.sh  flake.nix  output.txt  template
2015/: Cargo.toml
2021/: Cargo.toml
2022/: Cargo.toml  output.txt  run.sh
2022/inputs/: day12.txt
2022/src/: datastructs.rs
2022/src/datastructs/: Vec2.rs
2023/: Cargo.toml  o  o2
2024/: Cargo.toml
2025/: Cargo.toml
aoc/: Cargo.toml  template  test.rs
aoc/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  strings.rs  utils.rs
common/src/datastructs/: mod.rs  pwm.rs  vec2.rs
common/src/graphs/: bi_directional_map.rs  graph.rs  mod.rs  node_translator.rs  priority.rs
src/: datastructs.rs  lib.rs  utils.rs
src/datastructs/: Vec2.rs
