[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
glam = "0.24.2"
grid = "0.12.0"
indicatif = "0.17.7"
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
petgraph = "0.6.4"
rayon = "1.8.0"
