[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
glam = "0.29.2"
grid = "0.15.0"
indicatif = "0.17.9"
itertools = "0.13.0"
nom = "7.1.3"
num = "0.4.3"
petgraph = "0.6.5"
rayon = "1.10.0"
rstest = "0.23.0"
