[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
glam = "0.29.2"
indicatif = "0.17.9"
nom = "7.1.3"
rayon = "1.10.0"
common = { path = "../common" }
num = "0.4.3"
ndarray-linalg = { version = "0.16.0", features = ["openblas-static"] }
ndarray = "0.15.6"
